fix screen too small prompt

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ img {
     z-index: 9;
     min-width: 100%;
     min-height: 100%;
-    display: block;
+    display: none;
 }
 #loginPrompt {
     width: 500px;
@@ -153,8 +153,8 @@ img {
 #screenTooSmallPrompt {
     width: 500px;
     height: 400px;
-    background-color: lightgrey;
-    display: inline-block;
+    background-color: var(--text-primary);
+    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -162,18 +162,19 @@ img {
     z-index: 10;
     padding: 0;
 }
+
 #screenTooSmallPrompt > div {
-    width: 100%;
-    margin: 0;
-    padding: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
 }
-#screenTooSmallPrompt > div > button {
-    margin: 15px;
-    margin-right: 0;
+
+#screenTooSmallPrompt > button {
+    margin-left: 15px;
+    margin-top: 15px;
     border-radius: 50%;
     width: 35px;
     height: 35px;
@@ -186,21 +187,30 @@ img {
     justify-content: center;
 }
 #screenTooSmallPrompt h2 {
-    text-align: center;
-    font-size: 2rem;
-    width: 2rem;
+    font-size: 3rem;
     font-family: 'Parisine Office Web';
-    right: 50%;
-    margin-right: 15px;
     padding: 0;
-    transform: translateX();
+    margin: 0;
+    flex: 0.8;
+    color: var(--bg-primary);
 }
-#screenTooSmallPrompt > div > button > svg {
+#screenTooSmallPrompt svg {
     width: 20px;
     height: 20px;
+    fill: var(--bg-primary);
 }
-#screenTooSmallPrompt > div > button:hover {
-    background-color: var(--bg-primary);
+#screenTooSmallPrompt > button:hover {
+    background-color: var(--bg-secondary);
+}
+
+#screenTooSmallPrompt h3 {
+    font-size: 1.5rem;
+    font-family: 'Parisine Office Web';
+    flex: auto;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    color: var(--bg-primary);
 }
 
 @media only screen and (max-width:600px) {
